# GNN-Pruning-Research

./: .gitignore  PREFLIGHT_REPORT.md  README.md  RUN_REPORT.md  proposal.tex  pyproject.toml
docs/notebooks/: 01_dataset_exploration.ipynb  02_results_analysis.ipynb
results/magnitude/: summary.csv
results/magnitude/cora/gat/: metrics.json
results/magnitude/cora/gcn/: metrics.json
results/magnitude/wisconsin/gcn/: metrics.json
results/no-pruning/: summary.csv
results/no-pruning/cora/gat/: metrics.json
results/no-pruning/cora/gcn/: metrics.json
results/no-pruning/wisconsin/gcn/: metrics.json
results/wanda-degree/: summary.csv
results/wanda-degree/cora/gat/: metrics.json
results/wanda-degree/cora/gcn/: metrics.json
results/wanda-degree/wisconsin/gcn/: metrics.json
results/wanda-per-class/: summary.csv
results/wanda-per-class/cora/gat/: metrics.json
results/wanda-per-class/cora/gcn/: metrics.json
results/wanda-uniform/: summary.csv
scripts/: run_magnitude.sh  run_no_pruning.sh  run_wanda_degree.sh  run_wanda_per_class.sh  run_wanda_uniform.sh
src/gnn_pruning/: cli.py  plotting.py
src/gnn_pruning/configs/: magnitude.yaml  no_pruning.yaml  wanda_degree.yaml  wanda_per_class.yaml  wanda_uniform.yaml
src/gnn_pruning/data/: __init__.py  loaders.py
src/gnn_pruning/eval/: __init__.py
src/gnn_pruning/models/: __init__.py
src/gnn_pruning/pruning/: __init__.py  magnitude.py  no_pruning.py  wanda_degree.py  wanda_per_class.py  wanda_uniform.py
src/gnn_pruning/training/: __init__.py  activation_hooks.py
(+4 files in other folders)
