[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-pruning"
version = "0.0.0"
description = "Topology-aware activation-based pruning for Graph Neural Networks (CS260C, S26)."
requires-python = ">=3.10"
authors = [{ name = "Michael Mansour" }]
readme = "README.md"
dependencies = [
    "torch>=2.2",
    "torch_geometric>=2.5",
    "ogb>=1.3.6",
    "rdkit>=2024.3",
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "seaborn",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
